--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
 name = "BibInternal"
 uuid = "2027ae74-3657-4b95-ae00-e2f7d55c3e64"
-authors = ["jeanf "]
-version = "0.3.0"
+authors = ["azzaare"]
+version = "0.3.1"
