--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - "1.6"
+          - '1.6'
+          - '1.7'
+          - 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
@@ -20,8 +22,6 @@ jobs:
           - x86
         exclude:
           - os: macOS-latest
-            arch: x86
-          - os: windows-latest
             arch: x86
     steps:
       - uses: actions/checkout@v2
