--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,21 @@
 name = "BibInternal"
 uuid = "2027ae74-3657-4b95-ae00-e2f7d55c3e64"
 authors = ["azzaare"]
-version = "0.3.6"
+version = "0.3.7"
+
+[deps]
+TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [compat]
-julia = "1.6"
+TestItems = "1"
+julia = "1.10"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+ExplicitImports = "7d51a73a-1435-4ff3-83d9-f097790105c7"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+
+[targets]
+test = ["Aqua", "ExplicitImports", "JET", "Test", "TestItemRunner"]
